# shelby

./: Cargo.toml  crates.js  search-index.js  settings.html  source-files.js
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  dependency-review.yml  docs.yaml  release.yaml  rust-ci.yaml  rust-crates-io-publish.yaml
crates/shelby/: Cargo.toml
crates/shelby/src/: lib.rs
crates/shelby_cli/: Cargo.toml
crates/shelby_cli/src/: cli.rs  main.rs
crates/shelby_cli/src/lib/: cli.rs
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
shelby/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.Shelby.html
shelby_cli/: all.html  fn.main.html  index.html  sidebar-items.js
shelby_cli/cli/: fn.build_cli.html  fn.print_completions.html  fn.process_matches.html  fn.read_csv.html  index.html  sidebar-items.js  struct.Context.html
src/: lib.rs
src/shelby/: lib.rs.html
src/shelby_cli/: cli.rs.html  main.rs.html
