[package]
name = "shelby_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0", features = ["full"] }
clap = { version = "4.0.15", features = ["cargo"] }
clap_complete = "4.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
figment = { version = "0.10.6", features = ["env", "toml"] }
dirs = "4.0.0"
futures = "0.3.21"
